nginxmicro/deploymenthpa.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployappfront
  labels:
      app: deployappfront
spec:
    replicas: 2     #desiredstate
    strategy: 
          type: RollingUpdate
    selector: 
          matchLabels:
            app: deployappfront
    template: 
        metadata: 
            labels: 
              app: deployappfront   
        spec: 
          containers:
             - name: frontendapp
               image: nginx:latest
               ports:
                  - containerPort: 80
                    protocol: TCP
               resources:
                  requests:
                        memory: "64Mi"
                        cpu: "125m"
                  limits:     
                        memory: "128Mi"
                        cpu: "250m"
